# linkup-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/linkup_cli/: __init__.py  cli.py
